--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
       <p>تقدم المؤسسة خدمات دعوية إعلامية تتناول فكر المسلم
          وتحديات العصر والثقافة الإسلامية والفتاوى الشرعية المعتمدة
          والمحتوى الإسلامي الموثوق و الموثق من خلال كوادرها العلمية الإعلامية
-          و التنظيمية المتصلة بعلماء دمشق الأكابر. 
+          و التنظيمية المتصلة بعلماء دمشق الأكابر 
       </p>
     </section>
 
     <footer>
 
-
+      
       <div class="social-media">
         <a href="https://www.facebook.com/nahdatalsham" target="_blank">
             <i class="fab fa-facebook-f"></i>
