--- a/index.html
+++ b/index.html
@@ -54,6 +54,55 @@
     </iframe>
       </div>
   </div>
+  <div class="cards-container">
+
+    <div class="professor-card">
+        <div class="card-inner">
+            <div class="card-front">
+                <img src="9.jpg" class="professor-image">
+                <div class="professor-name">فضيلة الشيخ عبد الحليم أبو شعر</div>
+            </div>
+            <div class="card-back">
+                <div class="course-info">
+                    <div class="course-title"> تفسير القران الكريم</div>
+
+                    <p>كتاب : تفسير ابن كثير</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="professor-card">
+        <div class="card-inner">
+            <div class="card-front">
+                <img src="10.jpg"  class="professor-image">
+                <div class="professor-name">فضيلة الشيخ رشدي القلم</div>
+            </div>
+            <div class="card-back">
+                <div class="course-info">
+                    <div class="course-title">علم الفرائض</div>
+
+                    <p>كتاب:...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="professor-card">
+        <div class="card-inner">
+            <div class="card-front">
+                <img src="11.png"  class="professor-image">
+                <div class="professor-name">أ.أحمد كلاوي</div>
+            </div>
+            <div class="card-back">
+                <div class="course-info">
+                    <div class="course-title">الفقه الشافعي</div>
+                    <p>منهاج الطالبين</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <section class="about">
       <h2>من نحن؟</h2>
