--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                     <div class="course-title"> تفسير القران الكريم</div>
 
                     <p>كتاب : تفسير ابن كثير</p>
+                    <div>
+                      <button class="btn"><i class="animation"></i>التسجيل<i class="animation"></i>
+                      </button>
+                  </div>
                 </div>
             </div>
         </div>
@@ -83,6 +87,10 @@
                     <div class="course-title">علم الفرائض</div>
 
                     <p>كتاب:...</p>
+                    <div>
+                      <button class="btn"><i class="animation"></i>التسجيل<i class="animation"></i>
+                      </button>
+                  </div>
                 </div>
             </div>
         </div>
@@ -98,6 +106,10 @@
                 <div class="course-info">
                     <div class="course-title">الفقه الشافعي</div>
                     <p>منهاج الطالبين</p>
+                    <div>
+                      <button class="btn"><i class="animation"></i>التسجيل<i class="animation"></i>
+                      </button>
+                  </div>
                 </div>
             </div>
         </div>
